Fix collapsing margins in post tags (#37)
* Change tag display and add margin

- Change display to inline-block;
- Add 0.3em margin except for left margin.

* Change post tags text-align property to initial

The .wrapper class used in this theme forces the text-align property of
most of the page to justify. Tags look better with a left text-align.

--- a/_sass/dash/_layout.scss
+++ b/_sass/dash/_layout.scss
@@ -241,9 +241,15 @@
   }
 }
 
+.tag {
+  display: inline-block;
+  margin: 0.3em 0.3em 0.3em 0;
+}
+
 .post-tags {
   margin-top: 0.3em;
   margin-bottom: 0.5em;
+  text-align: initial;
 }
 
 .credits {
